coloquei umas coisas simples de bootstrap

--- a/views/editar-usuarios.handlebars
+++ b/views/editar-usuarios.handlebars
@@ -6,5 +6,6 @@
         <label>Sexo     <input type="text" name="sexo" value="{{sexo}}"></label><br>
         <label>Telefone <input type="text" name="telefone" value="{{telefone}}"></label><br>
     </ul>
-    <button type="submit">Concluir</button>
+    <button type="submit" class="btn btn-success">Concluir</button>
+    <a href="/listar-usuarios"><button class="btn btn-primary">Listar Usuários</button></a>
 </form>
