--- a/views/cadastrar-usuarios.handlebars
+++ b/views/cadastrar-usuarios.handlebars
@@ -1,11 +1,21 @@
-<h1>Cadastro de Usuários</h1>
-<form action="/cad-usuarios" method="POST">
-    <ul>
-        <label>Nome     <input type="text" name="nome" placeholder="Nome"></label><br>
-        <label>E-mail   <input type="text" name="email" placeholder="E-mail"></label><br>
-        <label>Sexo     <input type="text" name="sexo" placeholder="Sexo"></label><br>
-        <label>Telefone <input type="text" name="telefone" placeholder="Telefone"></label><br>
-    </ul>
-    <button type="submit">Cadastrar</button>
-</form>
-<a href="/listar-usuarios">Lista de Usuários</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro de Usuário<</title>
+</head>
+<body>
+    <h1>Cadastro de Usuários</h1>
+    <form action="/cad-usuarios" method="POST">
+        <ul>
+            <label>Nome     <input type="text" name="nome" placeholder="Nome"></label><br>
+            <label>E-mail   <input type="text" name="email" placeholder="E-mail"></label><br>
+            <label>Sexo     <input type="text" name="sexo" placeholder="Sexo"></label><br>
+            <label>Telefone <input type="text" name="telefone" placeholder="Telefone"></label><br>
+        </ul>
+        <button type="button submit" class="btn btn-dark">Cadastrar</button>
+    </form>
+    <a href="/listar-usuarios"><button class="btn btn-primary">Listar Usuários</button></a>
+</body>
+</html>
