--- a/views/editar-usuarios.handlebars
+++ b/views/editar-usuarios.handlebars
@@ -1,10 +1,10 @@
 <h1>Editar</h1>
 <form action="/edit-usuario/{{id}}" method="POST">
     <ul>
-        <label>Nome     <input type="text" name="nome" value="{{nome}}"></label><br>
-        <label>E-mail   <input type="text" name="email" value="{{email}}"></label><br>
-        <label>Sexo     <input type="text" name="sexo" value="{{sexo}}"></label><br>
-        <label>Telefone <input type="text" name="telefone" value="{{telefone}}"></label><br>
+        <label>Nome     <input class="form-control" type="text" name="nome" value="{{nome}}"></label><br>
+        <label>E-mail   <input class="form-control" type="text" name="email" value="{{email}}"></label><br>
+        <label>Sexo     <input class="form-control" type="text" name="sexo" value="{{sexo}}"></label><br>
+        <label>Telefone <input class="form-control" type="text" name="telefone" value="{{telefone}}"></label><br>
     </ul>
     <button type="submit" class="btn btn-success">Concluir</button>
     <a href="/listar-usuarios"><button class="btn btn-primary">Listar Usuários</button></a>
