--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,8 @@
     <style>
         body {
             padding-left: 2%;
+            padding-right: 2%;
+            padding-bottom: 2%;
             color: rgb(248, 235, 209);
             background: rgb(82,86,150);
             background: linear-gradient(90deg, rgba(82,86,150,1) 0%, rgba(18,18,154,1) 7%, rgba(47,195,230,1) 100%);
